--- a/src/styles/Productcard.module.css
+++ b/src/styles/Productcard.module.css
@@ -4,6 +4,7 @@
     box-shadow: 1px 2px 3px #ccc;
     padding: 10px;
 }
+
 .productname{
   margin-bottom: 10px;
 }
@@ -29,4 +30,11 @@
 .updateCartitem{
   display: flex;
   gap: 5px;
+  align-items: center;
+}
+
+.updateCartitem>p{
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0px 5px;
 }
