--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -4,6 +4,9 @@
     padding: 0px 30px;
     align-items: center;
     background: #E7717D;
+    position: sticky;
+    top: 0px;
+    z-index: 15;
 }
 
 .rightpart{
