--- a/src/styles/CartItemcard.module.css
+++ b/src/styles/CartItemcard.module.css
@@ -1,6 +1,4 @@
 
-
-
 .cartproduct{
     width: 100%;
     display: flex;
@@ -28,4 +26,16 @@
     margin: 0px 5px;
   }
 
- 
+ @media screen and (max-width:767px){
+    .cartproduct{
+        gap: 10px;
+        padding: 10px 10px;
+    }
+    .productimg{
+        width: 70px;
+    }
+    
+    .updateCartitem>p{
+        font-size: 16px;
+    }
+ }
