--- a/src/styles/Filter.module.css
+++ b/src/styles/Filter.module.css
@@ -7,34 +7,40 @@
 .multiSelction{
     display: flex;
     flex-direction: column;
-    gap: 2px;
-    margin-bottom: 15px;
+    gap: 5px;
+    margin-bottom: 0px;
 }
-
+.title{
+    border-bottom: 1px solid #000;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+}
 .selctbox{
     display: flex;
     align-items: center;
     min-height: 30px;
-    gap: 20px;
+    gap: 10px;
     margin-left: 15px;
     color: #000;
     font-size: 18px;
 }
 
-
 @media screen and (max-width:767px) {
     .container{
         display: flex;
-        gap: 20px;
+        flex-direction: column;
+        gap: 10px;
         justify-content:flex-start;
         flex-wrap: wrap;
     }
     .multiSelction{
-        border: 1px solid #ccc;
-        padding: 20px;
+        padding: 5px;
     }
     .selctbox{
         margin-left: 0px;
-        
     }
+    .title{
+        display: none;
+    }
+   
 }
