--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -22,7 +22,9 @@
     margin: auto;
     padding: 5px 20px;
 }
-
+.filtertitle{
+    display: none;    
+}
 
 @media screen and (max-width:767px) {
     .main{
@@ -33,16 +35,32 @@
         width: 100%;
         display: none;
     }
-    .smFilterSection{
-        width: 100%;
-        display: block;
-        margin-bottom: 20px;
-    }
 
+    .smFilterSection{
+        width: 60%;
+        display: block;
+        position: absolute;
+        top: 52px;
+        left: 0px;
+        margin-bottom: 20px;
+        min-height: 100%;
+        background-color: #fff;
+        z-index: 10;
+
+    }
+   
     .productSection{
         width: 100%;
     }
     .searchsection{
         width: 100%;
+    }
+    .filtertitle{
+        display:flex;
+        justify-content: space-between;
+        padding: 5px 20px;
+        align-items: center;
+        margin-bottom: 5px;
+        background-color: #eee;
     }
 }
