mobile filter menu responsive behaviour

--- a/src/styles/Filter.module.css
+++ b/src/styles/Filter.module.css
@@ -44,5 +44,36 @@
     .title{
         display: none;
     }
-   
+    .outercontainer{
+        height: 90vh;
+        overflow-y: scroll;
+        padding-bottom: 50px;
+    }
+
+    /* 
+    custom scrollbar
+    */
+
+    .outercontainer::-webkit-scrollbar {
+        width: .5em;
+    }
+
+    .outercontainer::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(245, 152, 152, 0.3);
+    }
+    
+    .outercontainer::-webkit-scrollbar-thumb {
+        background-color: #ccc;;
+        outline: 1px solid #918687;;
+        border-radius: 50px;
+    }
+
+    /* custom scroll bar style start */
 }
+
+
+
+
+
+
+
