--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -3,12 +3,15 @@
     justify-content: space-between;
     padding: 0px 30px;
     align-items: center;
-    background: #E7717D;
+    /* background: #E7717D; */
+    background: teal;
     position: sticky;
     top: 0px;
     z-index: 15;
 }
-
+.brandlogo{
+    width: 40px;
+}
 .rightpart{
     display: flex;
     gap: 20px;
