--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,12 +14,12 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(245, 152, 152, 0.3);
+    box-shadow: inset 0 0 6px rgba(128, 242, 242, 0.3);
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #E7717D;;
-    outline: 1px solid #c2505b;;
+    background-color: teal;;
+    outline: 1px solid rgb(128, 242, 242);
     border-radius: 50px;
 }
 
